add more experiments
Signed-off-by: Bassel Mahmoud <bassel_mac@hotmail.com>

--- a/modelInversion2/modelInversion2.ipynb
+++ b/modelInversion2/modelInversion2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -41,6 +41,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"cuda:0\"\n",
+    "# import pycuda.driver as cuda\n",
+    "# cuda.init()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "pycharm": {
@@ -53,23 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"cuda:0\"\n",
-    "import pycuda.driver as cuda\n",
-    "cuda.init()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -84,6 +84,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [],
+   "source": [
+    "attacked_person = 4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -92,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -122,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -141,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -184,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -216,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -238,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -276,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -302,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -321,13 +334,14 @@
     "net2.apply(models.weights_init)\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
+    "# two diffrent optimizer\n",
     "optimizer = optim.Adam(net.parameters(), lr=lr)\n",
     "optimizer2 = optim.SGD(net2.parameters(), lr=lr, momentum=0.9, weight_decay=5e-4)\n",
     "\n",
     "\n",
     "ww0 = copy.deepcopy(net2.hidden1.weight.data)\n",
     "bb = copy.deepcopy(net2.hidden1.bias.data[:])\n",
-    "im0 = ww0[30].reshape(112,92)\n"
+    "im0 = ww0[attacked_person].reshape(112,92)\n"
    ]
   },
   {
@@ -339,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -353,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -367,14 +381,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "ww = net2.hidden1.weight.data[:]\n",
     "bb = net2.hidden1.bias.data[:]\n",
     "im0CPU = im0.cpu().detach().numpy()\n",
     "\n",
-    "im_train = ww[20,:].squeeze().cpu().detach().numpy().reshape(112,92)\n",
+    "im_train = ww[attacked_person,:].squeeze().cpu().detach().numpy().reshape(112,92)\n",
     "plt.imshow(im0CPU,cmap='gray')\n",
     "plt.show()\n",
     "\n",
@@ -387,66 +407,185 @@
     "randimg = torch.randn(im_train.shape).cpu().detach().numpy()/100\n",
     "plt.imshow(im_train-randimg,cmap='gray')\n",
     "plt.show()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Gradient Ascent\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": false,
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "from torch.autograd import Variable\n",
     "\n",
     "def ga(image, net, iterations, lr,category):        \n",
     "    category = Variable(torch.cuda.LongTensor([category]))\n",
-    "    input = Variable(image.unsqueeze(0).cuda(), requires_grad=True)\n",
+    "    inputVar = Variable(image.unsqueeze(0).cuda(), requires_grad=True)\n",
     "    losses = []\n",
     "    grad0 = np.zeros((112,92))\n",
     "    for j in range(iterations):\n",
     "        for i in range(1):\n",
-    "\n",
+    "            \n",
+    "            # set the gradients of all model parameters to zero\n",
     "            net.zero_grad()\n",
     "            \n",
     "#             out = nn.functional.softmax(net(input), dim=1)\n",
-    "            out = net(input)\n",
+    "            out = net(inputVar)\n",
     "            loss= -out.take(category)#+reg_alpha\n",
     "            \n",
     "            loss.backward()\n",
-    "            input.data = input.data - lr * input.grad.data\n",
-    "            input.grad.zero_()\n",
+    "            inputVar.data = inputVar.data - lr * inputVar.grad.data\n",
+    "            inputVar.grad.zero_()\n",
     "        losses.append(loss.data)\n",
     "#         print(j)\n",
-    "        grad0=input.grad.data.squeeze().cpu().detach().numpy()\n",
-    "        input.grad.data = input.grad.data - input.grad.data\n",
+    "        grad0=inputVar.grad.data.squeeze().cpu().detach().numpy()\n",
+    "        inputVar.grad.data = inputVar.grad.data - inputVar.grad.data\n",
     "#         plt.imsave(f\"Results/2Fred {j}.png\",input.squeeze().cpu().detach().numpy(),cmap = 'gray',vmin =-1 , vmax = 1,format='png')\n",
     "    plt.plot(losses)\n",
     "    plt.show()\n",
     "\n",
     "    \n",
-    "    return input\n"
-   ],
+    "    return inputVar\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overfitted model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Gradient Ascent optimizes an input image to maximize the posterior of a particular category.\n",
+    "\n",
+    "Gradient Ascent reconstructs the memorized image within the parameters. If the model is well generalized with a lower learning rate and higher testing accuracy the method is not as effective. Although new results show that if the initial model parameters are subtracted from the reconstruction an accurate reconstruction will be generated."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "is_executing": false
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# np_page=np.random.random((112,92))\n",
+    "np_page=np.zeros((112,92))\n",
+    "\n",
+    "dream_ga=ga(torch.Tensor((np_page)),net,100,1e-1,attacked_person)\n",
+    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy(),cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "source": [
+    "## More generalized model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np_page=np.random.random((112,92))\n",
+    "np_page=np.zeros((112,92))\n",
+    "\n",
+    "dream_ga=ga(torch.Tensor((np_page)),net2,10,1e-1,attacked_person)\n",
+    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy(),cmap='gray')\n",
+    "plt.show()\n",
+    "# plt.imsave(\"noisy.png\",dream_ga.squeeze().cpu().detach().numpy(),cmap = 'gray',format='png')\n",
+    "# plt.imsave(\"noise.png\",im0,cmap = 'gray',format='png')\n",
+    "# plt.imsave(\"noisy-noise.png\",dream_ga.squeeze().cpu().detach().numpy()-im0,cmap = 'gray',format='png')\n",
+    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy()-im0CPU,cmap='gray')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regularization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alpha_reg_alpha = 6\n",
+    "def alpha_norm(input_matrix, alpha):\n",
+    "        \"\"\"\n",
+    "            Converts matrix to vector then calculates the alpha norm\n",
+    "        \"\"\"\n",
+    "        alpha_norm = ((input_matrix.view(-1))**alpha).sum()\n",
+    "        return alpha_norm\n",
+    "\n",
+    "\n",
+    "def ga_norm(image, net, iterations, lr,category):        \n",
+    "    category = Variable(torch.cuda.LongTensor([category]))\n",
+    "    input = Variable(image.unsqueeze(0).cuda(), requires_grad=True)\n",
+    "    losses=[]\n",
+    "\n",
+    "    for j in range(iterations):\n",
+    "        for i in range(1):\n",
+    "\n",
+    "            net.zero_grad()\n",
+    "            out = nn.functional.softmax(net(input), dim=1)\n",
+    "            reg_alpha = alpha_norm(input, alpha_reg_alpha)/1000\n",
+    "            loss= -out.take(category)+reg_alpha\n",
+    "            \n",
+    "            loss.backward()\n",
+    "            input.data = input.data - lr * input.grad.data\n",
+    "            input.grad.zero_()\n",
+    "#         print(j)\n",
+    "#         print(loss.data)\n",
+    "#         print(-out.take(category))\n",
+    "        losses.append(loss.data)\n",
+    "        # plt.imshow(input.squeeze().cpu().detach().numpy(),cmap = 'gray',vmin =-1 , vmax = 1)\n",
+    "        # plt.show()\n",
+    "#         plt.imsave(f\"Results/2Fred {j}.png\",input.squeeze().cpu().detach().numpy(),cmap = 'gray',vmin =-1 , vmax = 1,format='png')\n",
+    "    plt.plot(losses)\n",
+    "    plt.show()\n",
+    "\n",
+    "    \n",
+    "    return input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np_page=np.zeros((112,92))\n",
+    "\n",
+    "dream_ga=ga_norm(torch.Tensor((np_page)),net2,100,1e-1,attacked_person)\n",
+    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy()-im0CPU,cmap='gray')"
+   ]
   }
  ],
  "metadata": {
@@ -470,10 +609,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
