add more image show

--- a/modelInversion2/modelInversion2.ipynb
+++ b/modelInversion2/modelInversion2.ipynb
@@ -490,7 +490,10 @@
     "np_page=np.zeros((112,92))\n",
     "\n",
     "dream_ga=ga(torch.Tensor((np_page)),net,100,1e-1,attacked_person)\n",
-    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy(),cmap='gray')"
+    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy(),cmap='gray')\n",
+    "plt.show()\n",
+    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy()-im0CPU,cmap='gray')\n",
+    "plt.show()"
    ]
   },
   {
@@ -584,7 +587,10 @@
     "np_page=np.zeros((112,92))\n",
     "\n",
     "dream_ga=ga_norm(torch.Tensor((np_page)),net2,100,1e-1,attacked_person)\n",
-    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy()-im0CPU,cmap='gray')"
+    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy(),cmap='gray')\n",
+    "plt.show()\n",
+    "plt.imshow(dream_ga.squeeze().cpu().detach().numpy()-im0CPU,cmap='gray')\n",
+    "plt.show()"
    ]
   }
  ],
